--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "scripts": {
     "start": "node index.js"
   },
-
   "name": "triyo-test-api",
   "version": "1.0.0",
   "description": "tryio test api",
@@ -11,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.13.0"
   },
